2006-12-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Selectors/_SelectPerson.py: Enable markup for bith date column
	to enable birth fallback in italics (closes #763)

2006-12-13  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Family/_RegExpFatherName.py: Add new module.
	* src/Filters/Rules/Family/_RegExpMotherName.py: Add new module.
	* src/Filters/Rules/Family/_RegExpChildName.py: Add new module.
	* src/Filters/SideBar/_FamilySidebarFilter.py (get_filter): Use
	regex filters.
	* src/Filters/Rules/Family/__init__.py: Expose new modules.
	* src/Filters/Rules/Family/Makefile.am: Ship new files.
	* src/GrampsDb/_GrampsDbBase.py (_set_column_order): Correctly
	check for metadata being None.

2006-12-13  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* test/GrampsDb/GrampsDbBase_Test.py: fix test case to work with 
	reindex_reference_map

2006-12-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/Person/_HasRelationship.py: Fix FamilyRelType
	comparison (closes #758)

2006-12-12  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (about): Only displaye translator credits
	when they exist.
	* src/images/Makefile.am (icon_DATA): Install icon into pixmaps dir.

2006-12-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ArgHandler.py: Check recent file for existance before trying to
	load that file. (bug #447)
	* src/DataViews/_RelationView.py: Escape XML special chars
	* src/DataViews/_PedigreeView.py: Escape XML special chars
	* src/plugins/TestcaseGenerator.py: Create media note object;
	Randomize URL
	* src/GrampsDb/_WriteXML.py: Escape XML special chars

2006-12-11  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditMedia.py: fix menu title (bug#755)
	* src/GrampsDb/_WriteXML.py: handle XML escapes
	* src/DisplayModels/_BaseModel.py: handle ignored values in filtering

2006-12-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py (change_person): Break endless loop